--- a/Salud/MyCustomCollectionViewCell.xib
+++ b/Salud/MyCustomCollectionViewCell.xib
@@ -20,14 +20,14 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MBV-Ml-eYa">
                         <rect key="frame" x="0.0" y="0.0" width="194" height="160"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5kp-sA-xmZ">
-                                <rect key="frame" x="16" y="112" width="162" height="32"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5kp-sA-xmZ">
+                                <rect key="frame" x="16" y="123.66666666666667" width="162" height="20.333333333333329"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="t7K-xa-Ztb">
-                                <rect key="frame" x="16" y="16" width="162" height="80"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalCompressionResistancePriority="500" translatesAutoresizingMaskIntoConstraints="NO" id="t7K-xa-Ztb">
+                                <rect key="frame" x="16" y="16" width="162" height="91.666666666666671"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -37,7 +37,6 @@
                             <constraint firstItem="5kp-sA-xmZ" firstAttribute="top" secondItem="t7K-xa-Ztb" secondAttribute="bottom" constant="16" id="FFj-bv-us6"/>
                             <constraint firstItem="t7K-xa-Ztb" firstAttribute="top" secondItem="MBV-Ml-eYa" secondAttribute="top" constant="16" id="P2R-CV-92e"/>
                             <constraint firstAttribute="bottom" secondItem="5kp-sA-xmZ" secondAttribute="bottom" constant="16" id="PZi-qZ-guZ"/>
-                            <constraint firstItem="t7K-xa-Ztb" firstAttribute="height" secondItem="MBV-Ml-eYa" secondAttribute="height" multiplier="0.5" id="kyc-st-p5W"/>
                             <constraint firstItem="5kp-sA-xmZ" firstAttribute="leading" secondItem="MBV-Ml-eYa" secondAttribute="leading" constant="16" id="s2U-qf-GRj"/>
                             <constraint firstAttribute="trailing" secondItem="5kp-sA-xmZ" secondAttribute="trailing" constant="16" id="ujg-sD-aJa"/>
                         </constraints>
