feat: Se agrega xib de agregar carrito, cuando se le da tap a algún item del listado de medicamentos

--- a/Salud/MyCustomCollectionViewCell.xib
+++ b/Salud/MyCustomCollectionViewCell.xib
@@ -2,7 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,14 +20,14 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MBV-Ml-eYa">
                         <rect key="frame" x="0.0" y="0.0" width="194" height="160"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5kp-sA-xmZ">
-                                <rect key="frame" x="16" y="112" width="162" height="32"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5kp-sA-xmZ">
+                                <rect key="frame" x="16" y="132" width="162" height="12"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="t7K-xa-Ztb">
-                                <rect key="frame" x="16" y="16" width="162" height="80"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalCompressionResistancePriority="500" translatesAutoresizingMaskIntoConstraints="NO" id="t7K-xa-Ztb">
+                                <rect key="frame" x="16" y="16" width="162" height="100"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -37,7 +37,6 @@
                             <constraint firstItem="5kp-sA-xmZ" firstAttribute="top" secondItem="t7K-xa-Ztb" secondAttribute="bottom" constant="16" id="FFj-bv-us6"/>
                             <constraint firstItem="t7K-xa-Ztb" firstAttribute="top" secondItem="MBV-Ml-eYa" secondAttribute="top" constant="16" id="P2R-CV-92e"/>
                             <constraint firstAttribute="bottom" secondItem="5kp-sA-xmZ" secondAttribute="bottom" constant="16" id="PZi-qZ-guZ"/>
-                            <constraint firstItem="t7K-xa-Ztb" firstAttribute="height" secondItem="MBV-Ml-eYa" secondAttribute="height" multiplier="0.5" id="kyc-st-p5W"/>
                             <constraint firstItem="5kp-sA-xmZ" firstAttribute="leading" secondItem="MBV-Ml-eYa" secondAttribute="leading" constant="16" id="s2U-qf-GRj"/>
                             <constraint firstAttribute="trailing" secondItem="5kp-sA-xmZ" secondAttribute="trailing" constant="16" id="ujg-sD-aJa"/>
                         </constraints>
